Hadoop HDFS Change Log

Release 2.7.5 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HDFS-9153. Pretty-format the output for DFSIO. (Kai Zheng via wheat9)

    HDFS-8797. WebHdfsFileSystem creates too many connections for pread. (jing9)

  OPTIMIZATIONS

  BUG FIXES

    HDFS-12157. Do fsyncDirectory(..) outside of FSDataset lock.
    (Vinayakumar B. via kihwal)

    HDFS-9107. Prevent NN's unrecoverable death spiral after full GC (Daryn
    Sharp via Colin P. McCabe)

Release 2.7.4 - 2017-08-04

  INCOMPATIBLE CHANGES

    HDFS-7933. fsck should also report decommissioning replicas.
    (Xiaoyu Yao via Chris Nauroth).

  NEW FEATURES

    HDFS-9804. Allow long-running Balancer to login with keytab.
    (Xiao Chen via Zhe Zhang)

    HDFS-8131. Implement a space balanced block placement policy (Liu Shaohui
    via kihwal)

  IMPROVEMENTS

    HDFS-8721. Add a metric for number of encryption zones.
    (Rakesh R via Chris Nauroth)

    HDFS-8883. NameNode Metrics : Add FSNameSystem lock Queue Length.
    (Anu Engineer via Xiaoyu Yao)

    HDFS-8818. Changes the global moveExecutor to per datanode executors and
    changes MAX_SIZE_TO_MOVE to be configurable.(Tsz Wo Nicholas Sze)

    HDFS-8200. Refactor FSDirStatAndListingOp. (Haohui Mai)

    HDFS-9621. Consolidate FSDirStatAndListingOp#createFileStatus to let
    its INodesInPath parameter always include the target INode.
    (Jing Zhao)

    HDFS-10656. Optimize conversion of byte arrays back to path string.
    (Daryn Sharp via kihwal)

    HDFS-10674. Optimize creating a full path from an inode.
    (Daryn Sharp via kihwal)

    HDFS-10662. Optimize UTF8 string/byte conversions.
    (Daryn Sharp via kihwal)

    HDFS-10673. Optimize FSPermissionChecker's internal path usage.
    (Daryn Sharp via kihwal)

    HDFS-10744. Internally optimize path component resolution.
    (Daryn Sharp via kihwal)

    HDFS-9145. Tracking methods that hold FSNamesytemLock for too long.